--- a/demotico.html
+++ b/demotico.html
@@ -8,7 +8,7 @@
 <body>
 <div class="fixed-top "><a class="float-end btn btn-primary btn-lg" href="como.html">Como Funciona?</a></div>
 <section class="py-3 text-center container">
- <h1>A lingua portuguêsa é dificil.</h1>
+ <h1>A lingua portuguêsa é difícil.</h1>
  <p>A idéia é criar um funcionamento simplificado com o minimo necessario para a comunicação.
  </p>
 </section>
@@ -237,7 +237,7 @@
 							"a","as","à","às","da","das","na","nas","pela","pelas",
 							"uma","uns","dum","duns","duma", "dumas","num","nuns","numa","numas",
 							"pelo", "pelos","pela","pelas",
-							"que","e","como","para","pra"];
+							"que","como","para","pra"];
 							
 	let simbolos = [","];
 	
@@ -358,7 +358,7 @@ let verboser=["sou","era","fui",
 		let verboter = ["tenho", "tens", "tem", "temos", "tendes", "têm",
 									"tenha", "tenhas", "tenha", "tenhamos", "tenhais", "tenham",
 									"tem", "tu", "tenha", "tenhamos", "tende", "tenham",
-									"não", "tenhas", "tenha","tenhamos", "tenhais", "tenham",
+									"tenhas", "tenha","tenhamos", "tenhais", "tenham",
 									"tive", "tiveste", "teve", "tivemos", "tivestes", "tiveram",
 									"tivera", "tiveras", "tivera", "tivéramos", "tivéreis", "tiveram",
 									"tiver", "tiveres", "tiver", "tivermos", "tiverdes", "tiverem",
